<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:id="@+id/rootLayout"
    android:background="@drawable/ic_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:ems="10"
        android:text="Signup"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="RtlCompat" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_account"
        android:layout_width="150dp"
        android:layout_height="150dp" />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_marginTop="20dp"
        android:hint="First Name"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:ems="10"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etLastName"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Last Name"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <!--<EditText
        android:id="@+id/etUsername"
        android:ems="10"
        android:hint="Username"
        android:layout_marginTop="10dp"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />-->

    <EditText
        android:id="@+id/etPassword"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Password"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etConfirmPass"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Confirm Password"
        android:background="@drawable/custom_input"
        android:paddingStart="10dp"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <!--<TextView
        android:id="@+id/etDOB"
        android:ems="10"
        android:hint="Date of Birth"
        android:gravity="center|start"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:drawableEnd="@drawable/ic_lock"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />-->

    <EditText
        android:id="@+id/etAddress"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Address"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etPhoneNo"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="Phone Number"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <EditText
        android:id="@+id/etMail"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:hint="E-mail"
        android:textSize="16sp"
        android:paddingStart="10dp"
        android:background="@drawable/custom_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        tools:ignore="RtlCompat" />

    <Button
        android:id="@+id/btnSignup"
        android:text="SIGN UP"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:layout_gravity="center"
        app:cornerRadius = "20dp"
        android:backgroundTint="@color/purple_200"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:textColor="@color/purple_200"
        android:text="Got Account? Login Here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>